# taggedict

./: .flake8  .gitignore  .readthedocs.yaml  API.rst  LICENSE  Makefile  Pipfile  README.md  conf.py  index.rst  pyproject.toml  readthedocs.req.txt
.github/workflows/: publish.yml  test.yml
tagged/: __init__.py
taggedict/: __init__.py
tests/: test_common.py  test_delitem.py  test_getitem.py  test_init.py  test_setitem.py
