[build-system]
requires = ["setuptools", "build", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "taggedict"
description = "Tags-aware dictionary"
readme = "README.md"
keywords = ["dict", "tags"]
license = "MIT"
authors = [{ name = "Fr. Br. George", email = "george@altlinux.org" }]
classifiers = [
        "Development Status :: 3 - Alpha",
        "Programming Language :: Python",
]
requires-python = ">=3.10"
dependencies = [
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/FrBrGeorge/taggedict"
documentation = "https://readthedocs.org"

[tool.setuptools]
packages = ["taggedict"]

[tool.setuptools-git-versioning]
enabled = true
